<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_info_person"
    tools:context=".ui.EditPersonInfoActivity">

    <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_layout_margin_8dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_16dp"
                    android:text="@string/person_info"
                    android:textSize="@dimen/dimen_header_text_32sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="11dp"
                    android:layout_marginBottom="24dp"
                    android:hint="@string/name"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    app:endIconCheckable="true"
                    app:endIconMode="custom"
                    app:helperText="Your name, everyone will see it">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_person"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="11dp"
                    android:layout_marginBottom="24dp"
                    android:hint="@string/age"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="3"
                    app:endIconCheckable="true"
                    app:endIconMode="custom"
                    app:helperText="Age more 110?">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/age_person"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="11dp"
                    android:layout_marginBottom="24dp"
                    android:hint="@string/power"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="2"
                    app:endIconCheckable="true"
                    app:endIconMode="custom"
                    app:helperText="Find your power">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/power_person"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_layout_margin_8dp"
                    android:text="@string/fight" />

            </LinearLayout>
        </ScrollView>
</FrameLayout>