<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    android:id="@+id/transition_position"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:src="@drawable/profile_camera"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_profile"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_layout_margin_8dp"
                android:background="@color/teal_200"
                android:textColor="#000000"
                android:padding="@dimen/dimen_layout_margin_8dp"
                android:textSize="@dimen/dimen_body_text_24sp"
                tools:text="name" />
            <TextView
                android:id="@+id/age_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_layout_margin_8dp"
                android:background="@color/teal_200"
                android:textColor="#000000"
                android:padding="@dimen/dimen_layout_margin_8dp"
                android:textSize="@dimen/dimen_text_text_16sp"
                tools:text="name" />
            <TextView
                android:id="@+id/power_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_layout_margin_8dp"
                android:background="@color/teal_200"
                android:textColor="#000000"
                android:padding="@dimen/dimen_layout_margin_8dp"
                android:textSize="@dimen/dimen_text_text_16sp"
                tools:text="name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_new_name"
                android:hint="@string/new_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_new_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_age_person"
                android:inputType="number" />

            <Button
                android:id="@+id/button_change_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/change_data_profile" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/load_image_profile"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:src="@drawable/profile_camera"
        app:layout_anchor="@id/main_appbar"
        app:layout_anchorGravity="bottom|right|end"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
